--- a/src/assets/css/blog.css
+++ b/src/assets/css/blog.css
@@ -808,6 +808,7 @@
 @media only screen and (min-width: 0rem) {
   #blog-1289 {
     padding-top: 8rem;
+    padding-bottom: 8rem;
   }
   #blog-1289 .cs-container {
     width: 100%;
